--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "DEBUG=throwmytrash:* nodemon ./bin/www",
+    "dev": "DEBUG=throwmytrash:* nodemon -e js,hbs ./bin/www",
     "dev-windows": "nodemon ./bin/www"
   },
   "dependencies": {
